--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<html>
 
+  <head>
+
+     <title>Page Title</title>
+
+  </head>
+
+  <body> 
+  <style>body {background-color: CDD269;} </style>
+  
+
+     <DIV style="text-align:center;"><h1 style="border:5px solid green;">Russian Icons - Paintings Gallery</h1></DIV>
+
+
+<img src="http://www.abcgallery.com/I/icons/icon44.JPG" alt="Smiley face" height="444" width="258">
+
+<h2>About me.</h2>
+     
+     <p>Applies and tests knowledge learned in the classroom to the job in the future.
+Learning decision making and critical thinking skills,and explore what I interest in a field of design.</p>
+    
+      </body>
+
+</html>
