--- a/index.html
+++ b/index.html
@@ -7,18 +7,41 @@
   </head>
 
   <body> 
-  <style>body {background-color: CDD269;} </style>
+  <style>body {background-color: CDD269;} 
   
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto ;
+  grid-gap: 10px;
+  background-color: 505400;
+  padding: 10px;
+}
+.grid-container>div {
+  background-color: F8FCA8;
+  text-align: center;
+  padding:30px 0;
+  font-size: 100px;
+}
+.item1 {
+  grid-area: 2 / 1 / span 2 / span 3;
+}
+</style>
 
-     <DIV style="text-align:center;"><h1 style="border:5px solid green;">Russian Icons - Paintings Gallery</h1></DIV>
+     <DIV style="text-align:center;"><h1>Russian Icons - Paintings Gallery</h1></DIV>
+
+<div class="grid-container">
+  <div class="item2"><img src="http://www.abcgallery.com/I/icons/icon44.JPG" alt="Smiley face" height="444" width="258"></div>
+  <div class="item3">3</div>  
 
 
-<img src="http://www.abcgallery.com/I/icons/icon44.JPG" alt="Smiley face" height="444" width="258">
+</div>
 
-<h2>About me.</h2>
+
+<h2>St. Demetrius of Thessalonica.</h2>
+<p>c.1113</p>
      
-     <p>Applies and tests knowledge learned in the classroom to the job in the future.
-Learning decision making and critical thinking skills,and explore what I interest in a field of design.</p>
+     <p>222 x 129 cm. From the Mikhailovsky Zlatoverhy Monastery in Kiev.</p>
+     <p>The Tretyakov Gallery, Moscow, Russia.</p>
     
       </body>
 
