--- a/index.html
+++ b/index.html
@@ -20,28 +20,38 @@
   background-color: F8FCA8;
   text-align: center;
   padding:30px 0;
-  font-size: 20px;
+  }
+  
+  .big{
+	font-size:150%;  
+  
+  }
+  
+  .mid{
+	font-size:100%;  
+  
+  }
   
 .item1 {
   grid-area: 2 / 1 / span 2 / span 3;
 }
 </style>
 
-     <DIV style="text-align:center;"><h1>Russian Icons - Paintings Gallery</h1></DIV>
+     <div style="text-align:center;"><h1>Russian Icons - Paintings Gallery</h1></DIV>
 
 <div class="grid-container">
   
   <div class="item2"><img src="http://www.abcgallery.com/I/icons/icon44.JPG" alt="Smiley face" height="444" width="258"></div>
   
-  <div class="item3"><b>St. Demetrius of Thessalonica.</b>
+  <div class="item3"><b class="big">St. Demetrius of Thessalonica.</b>
   
-  <p>c.1113</p>
+  <p class= "mid" >c.1113</p>
   <p>222 x 129 cm</p>
   <p>The Tretyakov Gallery, Moscow, Russia.</p>
      
      </div>  
 
-  <div class="item4"><img src="http://www.abcgallery.com/I/icons/icon6.JPG" 
+  <div class="item4 big"><img src="http://www.abcgallery.com/I/icons/icon6.JPG" 
   alt="Smiley face" height="400" width="280"></div>
   
   <div class="item5"><b>St. Demetrius of Thessalonica.</b>
