--- a/index.html
+++ b/index.html
@@ -75,7 +75,23 @@
 
 </div>
 
+<script>
+var number1;
+var number2;
+var number1=3;
 
+result=3*3
+
+var name= "Jia";
+
+var lastname= "Jhen"
+
+var fullname= name + lastname;
+fullname= name + " " + lastname;
+sentence= "Hello,my name is "+fullname+".";
+alert("Your name is "+name);
+
+</script>
 
       </body>
 
