--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ var number1;
 var number2;
 var number1=3;
 
-result=3*3
+var result=3*3;
 
 var name= "Jia";
 
-var lastname= "Jhen"
+var lastname= "Jhen";
 
 var fullname= name + lastname;
 fullname= name + " " + lastname;
