--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@ var lastname= "Jhen";
 
 var fullname= name + lastname;
 fullname= name + " " + lastname;
-sentence= "Hello,my name is "+fullname+".";
-alert("Your name is "+name);
+alert("Hello,my name is "+fullname+".");
 
 </script>
 
